Login click event added as Dashboard

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
       </nav>
       <div id="LogSing">
-        <a class="Blacktxt" href="#">Login</a>
+        <a class="Blacktxt" href="DashBoard.html">Login</a>
         <a href="#" id="sgnUp">Sign Up</a>
       </div>
     </header>
