--- a/DashBoard.html
+++ b/DashBoard.html
@@ -19,7 +19,7 @@
       </div>
 
       <div id="ProfileContainer">
-        <a href="#" id="ProfileLink"
+        <a href="Admin_Profile.html" id="ProfileLink"
           >Profile <span><i class="ri-user-3-line"></i></span
         ></a>
       </div>
@@ -32,13 +32,13 @@
         <aside>
           <nav class="asideNav">
             <ul>
-              <li>
+              <li id="Selected_Page">
                 <span><i class="ri-dashboard-line"></i></span>
-                <a href="#">Dashboard</a>
+                <a href="DashBoard.html">Dashboard</a>
               </li>
               <li>
                 <span><i class="ri-calendar-event-line"></i></span
-                ><a href="#">Add Events</a>
+                ><a href="Add_Event.html">Add Events</a>
               </li>
               <li>
                 <span><i class="ri-user-3-line"></i></span>
@@ -50,7 +50,7 @@
               </li>
               <li id="logout">
                 <span><i class="ri-logout-circle-r-line"></i></span>
-                <a href="#">Logout</a>
+                <a href="index.html">Logout</a>
               </li>
             </ul>
           </nav>
