--- a/DashBoard.html
+++ b/DashBoard.html
@@ -42,7 +42,7 @@
               </li>
               <li>
                 <span><i class="ri-user-3-line"></i></span>
-                <a href="#">Users</a>
+                <a href="Users.html">Users</a>
               </li>
               <li>
                 <span> <i class="ri-settings-2-line"></i> </span>
