--- a/Add_Event.html
+++ b/Add_Event.html
@@ -70,7 +70,7 @@
 
         <!-- form Start -->
         <div id="AddEventFormContainer">
-          <form action="#" method="">
+          <form action="" method="" onSubmit="return AddEvent_Validation()">
             <div class="formGroup">
               <div>
                 <span>
@@ -79,7 +79,7 @@
                 <label for="eventName">Event Name</label>
               </div>
 
-              <input type="text" id="eventName" name="eventName" required />
+              <input type="text" id="eventName" name="eventName" />
             </div>
             <div class="formGroup">
               <div>
@@ -87,7 +87,7 @@
                 <label for="eventDate">Event Date</label>
               </div>
 
-              <input type="date" id="eventDate" name="eventDate" required />
+              <input type="date" id="eventDate" name="eventDate" />
             </div>
             <div class="formGroup">
               <div>
@@ -97,7 +97,7 @@
                 <label for="eventTime">Starting Time</label>
               </div>
 
-              <input type="time" id="eventTime" name="eventTime" required />
+              <input type="time" id="eventTime" name="eventTime" />
             </div>
             <div class="formGroup">
               <div>
@@ -107,12 +107,7 @@
                 <label for="eventLocation">Event Location</label>
               </div>
 
-              <input
-                type="text"
-                id="eventLocation"
-                name="eventLocation"
-                required
-              />
+              <input type="text" id="eventLocation" name="eventLocation" />
             </div>
             <div class="formGroup">
               <div>
@@ -124,7 +119,6 @@
                 id="eventDescription"
                 name="eventDescription"
                 rows="4"
-                required
               ></textarea>
             </div>
             <div class="formGroup">
@@ -140,7 +134,6 @@
                 id="eventImage"
                 name="eventImage"
                 accept="image/*"
-                required
               />
             </div>
             <div class="formGroup">
@@ -151,7 +144,7 @@
                 <label for="eventCategory">Event Category</label>
               </div>
 
-              <select id="eventCategory" name="eventCategory" required>
+              <select id="eventCategory" name="eventCategory">
                 <option value="" disabled selected>Select a category</option>
                 <option value="Music">Music</option>
                 <option value="Sports">Sports</option>
@@ -172,13 +165,17 @@
                 <label for="eventPrice">Event Price</label>
               </div>
 
-              <input
-                type="number"
-                id="eventPrice"
-                name="eventPrice"
-                min="0"
-                required
-              />
+              <input type="number" id="eventPrice" name="eventPrice" min="0" />
+            </div>
+            <div class="formGroup">
+              <div>
+                <span>
+                  <i class="ri-map-pin-line"></i>
+                </span>
+                <label for="eventVenue">Venue Details</label>
+              </div>
+
+              <input type="text" id="eventVenue" name="eventVenue" />
             </div>
             <div class="formGroup">
               <div>
@@ -191,15 +188,17 @@
                 id="eventCapacity"
                 name="eventCapacity"
                 min="1"
-                required
               />
             </div>
 
             <button type="submit" id="submitBtn">Add Event</button>
           </form>
+          <div id="errorMessage" class="errorMessage"></div>
         </div>
         <!-- form ends -->
       </section>
     </main>
+
+    <script src="AddEvent.js"></script>
   </body>
 </html>
