php and EventCalender Added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav>
         <ul>
           <li><a class="Blacktxt" href="#home">Home</a></li>
-          <li><a href="#about">Events</a></li>
+          <li><a href="EventCalendar.html">Events</a></li>
           <li><a href="#contact">Contact Us</a></li>
         </ul>
       </nav>
@@ -39,10 +39,10 @@
             events happening around you.
           </p>
           <div class="HeroSec-Div">
-            <a href="#Explore" id="Explore" class="hero-buttons-exp"
+            <a href="#SrcBar" id="Explore" class="hero-buttons-exp"
               >Explore Events</a
             >
-            <a href="#how it works" id="HowitWork" class="hero-buttons-exp"
+            <a href="#HowitWork-Section" id="HowitWork" class="hero-buttons-exp"
               >How It Works</a
             >
           </div>
@@ -403,7 +403,7 @@
           </div>
 
           <div id="newsletter-privacy">
-             <p class="Newsletter-Description">
+            <p class="Newsletter-Description">
               By subscribing, you agree to our Privacy Policy and consent to
               receive updates from us.
             </p>
