--- a/Add_Event.html
+++ b/Add_Event.html
@@ -70,7 +70,7 @@
 
         <!-- form Start -->
         <div id="AddEventFormContainer">
-          <form action="" method="" onSubmit="return AddEvent_Validation()">
+          <form action="add_Event.php" method="post" enctype="multipart/form-data">
             <div class="formGroup">
               <div>
                 <span>
