SignUp,Login,ProfileManagement,Contact form,email varification Added

--- a/DashBoard.html
+++ b/DashBoard.html
@@ -19,7 +19,7 @@
       </div>
 
       <div id="ProfileContainer">
-        <a href="Admin_Profile.html" id="ProfileLink"
+        <a href="ProfileManagement.html" id="ProfileLink"
           >Profile <span><i class="ri-user-3-line"></i></span
         ></a>
       </div>
