--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
       </div>
       <nav>
         <ul>
-          <li><a class="Blacktxt" href="#home">Home</a></li>
+          <li><a class="ActivePage" href="#home">Home</a></li>
           <li><a href="EventCalendar.html">Events</a></li>
-          <li><a href="#contact">Contact Us</a></li>
+          <li><a href="contactUs.html">Contact Us</a></li>
         </ul>
       </nav>
       <div id="LogSing">
-        <a class="Blacktxt" href="DashBoard.html">Login</a>
-        <a href="#" id="sgnUp">Sign Up</a>
+        <a class="Blacktxt" href="login.html">Login</a>
+        <a href="signUp.html" id="sgnUp">Sign Up</a>
       </div>
     </header>
     <main>
