Event Details page added

--- a/EventCalendar.html
+++ b/EventCalendar.html
@@ -25,7 +25,7 @@
       </nav>
       <div id="LogSing">
         <a class="Blacktxt" href="DashBoard.html">Login</a>
-        <a href="#" id="sgnUp">Sign Up</a>
+        <a href="signUp.html" id="sgnUp">Sign Up</a>
       </div>
     </header>
     <!-- Header Ends -->
