--- a/EventDetails.html
+++ b/EventDetails.html
@@ -18,14 +18,14 @@
       </div>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a class="ActivePage" href="#about">Events</a></li>
-          <li><a href="#contact">Contact Us</a></li>
+          <li><a class="ActivePage" href="#home">Home</a></li>
+          <li><a href="EventCalendar.html">Events</a></li>
+          <li><a href="contactUs.html">Contact Us</a></li>
         </ul>
       </nav>
       <div id="LogSing">
-        <a class="Blacktxt" href="DashBoard.html">Login</a>
-        <a href="#" id="sgnUp">Sign Up</a>
+        <a class="Blacktxt" href="login.html">Login</a>
+        <a href="signUp.html" id="sgnUp">Sign Up</a>
       </div>
     </header>
     <!-- Header Ends -->
@@ -44,7 +44,7 @@
             />
           </div>
           <div id="EventContentDetails">
-            <h2>Event Description</h2>
+            <h2>Event Details</h2>
             <p>
               Join us for the UEFA Champions League Final, where the best teams
               in Europe battle for glory. Experience the thrill of live
@@ -54,13 +54,39 @@
             </p>
             <h3>Event Information</h3>
             <ul>
-              <li><strong>Date:</strong> June 10, 2025</li>
-              <li><strong>Time:</strong> 8:00 PM BST</li>
-              <li><strong>Venue:</strong> Wembley Stadium, London</li>
-              <li><strong>Tickets:</strong> Starting from $100</li>
+              <li>
+                <strong><i class="ri-calendar-line"></i></strong> June 10, 2025
+              </li>
+              <li>
+                <strong><i class="ri-time-line"></i></strong> 8:00 PM
+              </li>
+              <li>
+                <strong><i class="ri-ancient-pavilion-fill"></i></strong>
+                Wembley Stadium, London
+              </li>
+              <li>
+                <strong><i class="ri-price-tag-3-fill"></i></strong> Starting
+                from <strong>&nbsp;$100</strong>
+              </li>
             </ul>
+            <div id="Stars">
+              <span>Reviews:</span>
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-half-fill"></i>
+            </div>
+            <div id="CartAndBookNow_Btn_Container">
+              <a id="BookNowBTN" href="">Book Now</a>
+              <a id="AddToCartBtn" href="">Add to Cart</a>
+            </div>
           </div>
         </div>
+
+        <!-- Antu's Part Goes Here -->
+
+        <!-- Antu's Part End -->
       </section>
     </main>
     <!-- Footer Section -->
