Seat selection & ticket type added

--- a/EventDetails.html
+++ b/EventDetails.html
@@ -78,7 +78,7 @@
               <i class="ri-star-half-fill"></i>
             </div>
             <div id="CartAndBookNow_Btn_Container">
-              <a id="BookNowBTN" href="">Book Now</a>
+              <a id="BookNowBTN" href="ticketType.html">Book Now</a>
               <a id="AddToCartBtn" href="">Add to Cart</a>
             </div>
           </div>
