Login Problem solve

--- a/login.html
+++ b/login.html
@@ -49,7 +49,7 @@
           href="DashBoard.html"
           onclick="return validateLogin()"
           class="login-btn"
-          >Log In</a
+          >Login</a
         >
 
         <div class="divider">Or, log in with</div>
