--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eventify</title>
-    <link rel="stylesheet" href="../Asset/CSS/style_Index.css" />
+    <link rel="stylesheet" href="./Asset/CSS/style_Index.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
@@ -17,14 +17,14 @@
       </div>
       <nav>
         <ul>
-          <li><a class="ActivePage" href="#home">Home</a></li>
-          <li><a href="EventCalendar.html">Events</a></li>
-          <li><a href="contactUs.html">Contact Us</a></li>
+          <li><a class="ActivePage" href="index.html">Home</a></li>
+          <li><a href="./View/EventCalendar.html">Events</a></li>
+          <li><a href="./View/contactUs.html">Contact Us</a></li>
         </ul>
       </nav>
       <div id="LogSing">
-        <a class="Blacktxt" href="../View/login.html">Login</a>
-        <a href="../View/signUp.html" id="sgnUp">Sign Up</a>
+        <a class="Blacktxt" href="./View/login.html">Login</a>
+        <a href="./View/signUp.html" id="sgnUp">Sign Up</a>
       </div>
     </header>
     <main>
@@ -437,7 +437,7 @@
             <ul>
               <li><a href="#">About</a></li>
               <li><a href="#">Careers</a></li>
-              <li><a href="contactUs.html">Contact</a></li>
+              <li><a href="./View/contactUs.html">Contact</a></li>
             </ul>
           </div>
           <div class="footer-column">
@@ -463,6 +463,6 @@
         <p>&copy; 2025 Eventify. All rights reserved.</p>
       </div>
     </footer>
-    <script src="../Asset/js/LandingPage.js"></script>
+    <script src="./Asset/js/LandingPage.js"></script>
   </body>
 </html>
