Event Listerner added on Book now Button

--- a/index.html
+++ b/index.html
@@ -171,7 +171,9 @@
                 <span
                   ><i class="ri-calendar-line"></i> Apr 15, 2025 • 2:00 PM</span
                 >
-                <button class="Featured-button">Book Now</button>
+                <button id="BookNowBtn_1" class="Featured-button">
+                  Book Now
+                </button>
               </div>
             </div>
           </div>
@@ -195,7 +197,9 @@
                 <span
                   ><i class="ri-calendar-line"></i> Apr 15, 2025 • 2:00 PM</span
                 >
-                <button class="Featured-button">Book Now</button>
+                <button id="BookNowBtn_2" class="Featured-button">
+                  Book Now
+                </button>
               </div>
             </div>
           </div>
@@ -222,7 +226,9 @@
                 <span
                   ><i class="ri-calendar-line"></i> Apr 15, 2025 • 2:00 PM</span
                 >
-                <button class="Featured-button">Book Now</button>
+                <button id="BookNowBtn_3" class="Featured-button">
+                  Book Now
+                </button>
               </div>
             </div>
           </div>
@@ -250,7 +256,9 @@
                 <span
                   ><i class="ri-calendar-line"></i> Apr 15, 2025 • 2:00 PM</span
                 >
-                <button class="Featured-button">Book Now</button>
+                <button id="BookNowBtn_4" class="Featured-button">
+                  Book Now
+                </button>
               </div>
             </div>
           </div>
