Featured Image fixed

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           <div id="F1" class="Featured-cards">
             <div class="Featured-img-container">
               <img
-                src="../Asset/Image/Featured_Img_1.jpg"
+                src="./Asset/Image/Featured_Img_1.jpg"
                 class="Featured-img"
                 alt="Featured Event 1"
               />
@@ -181,7 +181,7 @@
           <div id="F2" class="Featured-cards">
             <div class="Featured-img-container">
               <img
-                src="../Asset/Image/uefa-champions-league-stadium-0rqhq348gkv25lxg.jpg"
+                src="./Asset/Image/uefa-champions-league-stadium-0rqhq348gkv25lxg.jpg"
                 class="Featured-img"
                 alt="Featured Event 1"
               />
@@ -207,7 +207,7 @@
           <div id="F3" class="Featured-cards">
             <div class="Featured-img-container">
               <img
-                src="../Asset/Image/Theatre 1.jpg"
+                src="./Asset/Image/Theatre 1.jpg"
                 class="Featured-img"
                 alt="Featured Event 1"
               />
@@ -237,7 +237,7 @@
           <div id="F4" class="Featured-cards">
             <div class="Featured-img-container">
               <img
-                src="../Asset/Image/Business-Logo.jpg"
+                src="./Asset/Image/Business-Logo.jpg"
                 class="Featured-img"
                 alt="Featured Event 1"
               />
