User Review Section Fixed

--- a/index.html
+++ b/index.html
@@ -342,11 +342,7 @@
               tickets instantly. Highly recommend!"
             </p>
             <div class="User-Name">
-              <img
-                src="../Asset/Image/User1.jpg"
-                alt="User 1"
-                class="User-Img"
-              />
+              <img src="./Asset/Image/User1.jpg" alt="User 1" class="User-Img" />
               <span class="User-Name-Text">John Doe</span>
             </div>
           </div>
@@ -366,11 +362,7 @@
               Great platform!"
             </p>
             <div class="User-Name">
-              <img
-                src="../Asset/Image/User-2.jpg"
-                alt="User 2"
-                class="User-Img"
-              />
+              <img src="./Asset/Image/User-2.jpg" alt="User 2" class="User-Img" />
               <span class="User-Name-Text">Jane Smith</span>
             </div>
           </div>
@@ -391,7 +383,7 @@
             </p>
             <div class="User-Name">
               <img
-                src="../Asset/Image/User-3.jpg"
+                src="./Asset/Image/User-3.jpg"
                 alt="User 3"
                 class="User-Img"
               />
