Waiting List & Refund Policy Added

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <ul>
           <li><a class="ActivePage" href="index.html">Home</a></li>
           <li><a href="./View/EventCalendar.html">Events</a></li>
-          <li><a href="./View/contactUs.html">Contact Us</a></li>
+          <li><a href="./View/contactUs 1.html">Contact Us</a></li>
         </ul>
       </nav>
       <div id="LogSing">
-        <a class="Blacktxt" href="./View/login.html">Login</a>
-        <a href="./View/signUp.html" id="sgnUp">Sign Up</a>
+        <a class="Blacktxt" href="./View/login 1.html">Login</a>
+        <a href="./View/signUp 2.html" id="sgnUp">Sign Up</a>
       </div>
     </header>
     <main>
@@ -342,7 +342,11 @@
               tickets instantly. Highly recommend!"
             </p>
             <div class="User-Name">
-              <img src="./Asset/Image/User1.jpg" alt="User 1" class="User-Img" />
+              <img
+                src="./Asset/Image/User1.jpg"
+                alt="User 1"
+                class="User-Img"
+              />
               <span class="User-Name-Text">John Doe</span>
             </div>
           </div>
@@ -362,7 +366,11 @@
               Great platform!"
             </p>
             <div class="User-Name">
-              <img src="./Asset/Image/User-2.jpg" alt="User 2" class="User-Img" />
+              <img
+                src="./Asset/Image/User-2.jpg"
+                alt="User 2"
+                class="User-Img"
+              />
               <span class="User-Name-Text">Jane Smith</span>
             </div>
           </div>
@@ -444,7 +452,7 @@
             <h4>Support</h4>
             <ul>
               <li><a href="#">Help Center</a></li>
-              <li><a href="#">Terms of Service</a></li>
+              <li><a href="./View/Refund.html">Refund Policy</a></li>
               <li><a href="#">Privacy Policy</a></li>
             </ul>
           </div>
