--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
   </head>
   <body>
+    <!-- header Starts -->
     <header>
       <div>
         <span class="logo">Eventify</span>
@@ -27,6 +28,7 @@
         <a href="./View/signUp 2.html" id="sgnUp">Sign Up</a>
       </div>
     </header>
+    <!-- header Ends -->
     <main>
       <!-- Hero Section -->
       <section id="hero">
@@ -443,17 +445,13 @@
           <div class="footer-column">
             <h4>Company</h4>
             <ul>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Careers</a></li>
-              <li><a href="./View/contactUs.html">Contact</a></li>
+              <li><a href="./View/contactUs 1.html">Contact</a></li>
             </ul>
           </div>
           <div class="footer-column">
             <h4>Support</h4>
             <ul>
-              <li><a href="#">Help Center</a></li>
               <li><a href="./View/Refund.html">Refund Policy</a></li>
-              <li><a href="#">Privacy Policy</a></li>
             </ul>
           </div>
           <div class="footer-column">
