--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul>
           <li><a class="ActivePage" href="index.html">Home</a></li>
           <li><a href="./View/EventCalendar.html">Events</a></li>
-          <li><a href="./View/contactUs 1.html">Contact Us</a></li>
+          <li><a href="./View/contactUs.html">Contact Us</a></li>
         </ul>
       </nav>
       <div id="LogSing">
@@ -445,7 +445,7 @@
           <div class="footer-column">
             <h4>Company</h4>
             <ul>
-              <li><a href="./View/contactUs 1.html">Contact</a></li>
+              <li><a href="./View/contactUs.html">Contact</a></li>
             </ul>
           </div>
           <div class="footer-column">
