--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       <nav>
         <ul>
           <li><a class="ActivePage" href="index.html">Home</a></li>
-          <li><a href="./View/EventCalendar.html">Events</a></li>
+          <li><a href="./View/EventCalendar.php">Events</a></li>
           <li><a href="./View/contactUs.html">Contact Us</a></li>
         </ul>
       </nav>
       <div id="LogSing">
-        <a class="Blacktxt" href="./View/login 1.html">Login</a>
-        <a href="./View/signUp 2.html" id="sgnUp">Sign Up</a>
+        <a class="Blacktxt" href="./View/login.html">Login</a>
+        <a href="./View/signUp.html" id="sgnUp">Sign Up</a>
       </div>
     </header>
     <!-- header Ends -->
@@ -451,7 +451,7 @@
           <div class="footer-column">
             <h4>Support</h4>
             <ul>
-              <li><a href="./View/Refund.html">Refund Policy</a></li>
+              <li><a href="./View/Refund.php">Refund Policy</a></li>
             </ul>
           </div>
           <div class="footer-column">
